--- a/index.html
+++ b/index.html
@@ -273,87 +273,11 @@
                     const existingDocs = await getDocs(streamersCollectionRef); 
                     if (existingDocs.empty) {
                         const initialStreamers = [
-                            { name: 'Ninja', channel: 'https://kick.com/ninja' },
-                            { name: 'xQc', channel: 'https://kick.com/xqcow' },
-                            { name: 'Aydan', channel: 'https://kick.com/aydan' },
-                            { name: 'Trainwreckstv', channel: 'https://kick.com/trainwreckstv' },
-                            { name: 'Amouranth', channel: 'https://kick.com/amouranth' },
-                            { name: 'AdinRoss', channel: 'https://kick.com/adinross' },
-                            { name: 'Mizkif', channel: 'https://kick.com/mizkif' },
-                            { name: 'Kai Cenat', channel: 'https://kick.com/kaicenat' },
-                            { name: 'Pokimane', channel: 'https://kick.com/pokimane' },
-                            { name: 'Sykkuno', channel: 'https://kick.com/sykkuno' },
+                         
                             { name: 'Jahrein', channel: 'https://kick.com/jahrein' },
                             { name: 'Elraenn', channel: 'https://kick.com/elraenn' },
                             { name: 'wtcN', channel: 'https://kick.com/wtcn' },
-                            { name: 'Pqueen', channel: 'https://kick.com/pqueen' },
-                            { name: 'kendinemuzisyen', channel: 'https://kick.com/kendinemuzisyen' },
-                            { name: 'HasanAbi', channel: 'https://kick.com/hasanabi' },
-                            { name: 'Mithrain', channel: 'https://kick.com/mithrain' },
-                            { name: 'Riot Games TR', channel: 'https://kick.com/riotgamestr' },
-                            { name: 'Burak Oyunda', channel: 'https://kick.com/burakoyunda' },
-                            { name: 'Unlost', channel: 'https://kick.com/unlost' },
-                            { name: 'Shroud', channel: 'https://kick.com/shroud' },
-                            { name: 'Nickmercs', channel: 'https://kick.com/nickmercs' },
-                            { name: 'DrDisrespect', channel: 'https://kick.com/drdisrespect' },
-                            { name: 'TimTheTatman', channel: 'https://kick.com/timthetatman' },
-                            { name: 'Summit1g', channel: 'https://kick.com/summit1g' },
-                            { name: 'Moistcr1tikal', channel: 'https://kick.com/moistcr1tikal' },
-                            { name: 'Forsen', channel: 'https://kick.com/forsen' },
-                            { name: 'Asmongold', channel: 'https://kick.com/asmongold' },
-                            { name: 'Trainwreckstv', channel: 'https://kick.com/trainwreckstv' },
-                            { name: 'Gorgc', channel: 'https://kick.com/gorgc' },
-                            { name: 'AdmiralBulldog', channel: 'https://kick.com/admiralbulldog' },
-                            { name: 'Tarik', channel: 'https://kick.com/tarik' },
-                            { name: 'Lirik', channel: 'https://kick.com/lirik' },
-                            { name: 'Sodapoppin', channel: 'https://kick.com/sodapoppin' },
-                            { name: 'Syndicate', channel: 'https://kick.com/syndicate' },
-                            { name: 'TheGrefg', channel: 'https://kick.com/thegrefg' },
-                            { name: 'Rubius', channel: 'https://kick.com/rubius' },
-                            { name: 'AuronPlay', channel: 'https://kick.com/auronplay' },
-                            { name: 'Ibai', channel: 'https://kick.com/ibai' },
-                            { name: 'xQcOW', channel: 'https://kick.com/xqc' },
-                            { name: 'Loud_Coringa', channel: 'https://kick.com/loud_coringa' },
-                            { name: 'Gaules', channel: 'https://kick.com/gaules' },
-                            { name: 'Fallen', channel: 'https://kick.com/fallen' },
-                            { name: 'Alanzoka', channel: 'https://kick.com/alanzoka' },
-                            { name: 'Squeex', channel: 'https://kick.com/squeex' },
-                            { name: 'OTKNetwork', channel: 'https://kick.com/otknetwork' },
-                            { name: 'Simply', channel: 'https://kick.com/simply' },
-                            { name: 'Tectone', channel: 'https://kick.com/tectone' },
-                            { name: 'EsfandTV', channel: 'https://kick.com/esfandtv' },
-                            { name: 'Myth', channel: 'https://kick.com/myth' },
-                            { name: 'PENTA', channel: 'https://kick.com/penta' },
-                            { name: 'Burn', channel: 'https://kick.com/burn' },
-                            { name: 'RatedEpicz', channel: 'https://kick.com/ratedepicz' },
-                            { name: 'Ramee', channel: 'https://kick.com/ramee' },
-                            { name: 'ChangGang', channel: 'https://kick.com/changgangleader' },
-                            { name: 'Valkyrae', channel: 'https://kick.com/valkyrae' },
-                            { name: 'Toast', channel: 'https://kick.com/disguisedtoast' },
-                            { name: 'LilyPichu', channel: 'https://kick.com/lilypichu' },
-                            { name: 'Fuslie', channel: 'https://kick.com/fuslie' },
-                            { name: 'Yvonnie', channel: 'https://kick.com/yvonnie' },
-                            { name: 'Ludwig', channel: 'https://kick.com/ludwig' },
-                            { name: 'QTcinderella', channel: 'https://kick.com/qtcinderella' },
-                            { name: 'Pokelawls', channel: 'https://kick.com/pokelawls' },
-                            { name: 'xqcL', channel: 'https://kick.com/xqcl' },
-                            { name: 'syracuse', channel: 'https://kick.com/syracuse' },
-                            { name: 'moose', channel: 'https://kick.com/moose' },
-                            { name: 'clix', channel: 'https://kick.com/clix' },
-                            { name: 'bugha', channel: 'https://kick.com/bugha' },
-                            { name: 'mongraal', channel: 'https://kick.com/mongraal' },
-                            { name: 'Tfue', channel: 'https://kick.com/tfue' },
-                            { name: 'NinjaPlays', channel: 'https://kick.com/ninjaplays' },
-                            { name: 'Poki', channel: 'https://kick.com/poki' },
-                            { name: 'SykkunoLive', channel: 'https://kick.com/sykkunolive' },
-                            { name: 'Squeex_TV', channel: 'https://kick.com/squeextv' },
-                            { name: 'Hasang_Piker', channel: 'https://kick.com/hasan_piker' },
-                            { name: 'Elraenn_Kick', channel: 'https://kick.com/elraenn_kick' },
-                            { name: 'Wtcn_Live', channel: 'https://kick.com/wtcn_live' },
-                            { name: 'Pqueen_Official', channel: 'https://kick.com/pqueen_official' },
-                            { name: 'KendineMuzisyen_Official', channel: 'https://kick.com/kendinemuzisyen_official' },
-                            { name: 'Mithrain_Official', channel: 'https://kick.com/mithrain_official' },
-                            { name: 'Burak_Oyunda', channel: 'https://kick.com/burak_oyunda' },
+                            { name: 'Mithrain', channel: 'https://kick.com/mithrain' }
                             { name: 'UnlostV', channel: 'https://kick.com/unlostv' },
                         ];
                         for (const streamer of initialStreamers) {
